--- a/ClassifyECG.ipynb
+++ b/ClassifyECG.ipynb
@@ -26,14 +26,14 @@
    "metadata": {},
    "source": [
     "## Overview\n",
-    "This notebook performs regression to predict sentiment and helpfulness scores from text reviews.\n",
+    "This notebook classifies time-series for segmented heartbeats from ECG lead II recordings. Either of two models (CNN or RNN) can be selected from training and evaluation.\n",
     "- Data for this analysis should be prepared using the `PreprocessECG.ipynb` notebook from this project.\n",
     "- Original data is from: https://www.kaggle.com/coni57/model-from-arxiv-1805-00794"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,12 +96,19 @@
    "metadata": {},
    "source": [
     "### Define the models\n",
-    "* The first model is taken from: https://arxiv.org/pdf/1805.00794.pdf"
+    "#### Convolutional Model\n",
+    "* The convolutional model is taken from: https://arxiv.org/pdf/1805.00794.pdf\n",
+    "\n",
+    "Model consists of:\n",
+    "* An initial 1-D convolutional layer\n",
+    "* 5 repeated residual blocks (`same` padding)\n",
+    "* A fully-connected layer\n",
+    "* A linear layer with softmax output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +131,6 @@
     "\n",
     "    current_layer = keras.Flatten()(current_layer)\n",
     "    current_layer = keras.Dense(32, name='FC1', activation='relu')(current_layer)\n",
-    "    current_layer = keras.Dense(32, name='FC2')(current_layer)\n",
     "    logits = keras.Dense(5, name='Output')(current_layer)\n",
     "    \n",
     "    return logits"
@@ -134,31 +140,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- RNN model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "RNN_MODEL_DIR = './Models/GRU'\n",
-    "RNN_OUTPUT_UNITS = [128, 256]\n",
+    "#### Recurrent Model\n",
     "\n",
-    "def rnn_model(input_layer, mode, params):\n",
-    "    current_layer = tf.keras.layers.Masking(mask_value=0., input_shape=(187, 1), name='Masked')(input_layer)\n",
+    "Model consists of:\n",
+    "* Two stacked bidirectional GRU layers\n",
+    "* Two fully-connected layers\n",
+    "* A linear layer with softmax output\n",
     "\n",
-    "    for i, size in enumerate(RNN_OUTPUT_UNITS):\n",
-    "        notLast = i + 1 < len(RNN_OUTPUT_UNITS)\n",
-    "        #current_layer = tf.keras.layers.LSTM(size, return_sequences=notLast, dropout=0.2, recurrent_dropout=0.0, name = 'LSTM' + str(i+1))(current_layer)\n",
-    "        current_layer = tf.keras.layers.GRU(size, return_sequences=notLast, dropout=0.2, recurrent_dropout=0.0, name = 'GRU' + str(i+1))(current_layer)\n",
-    "    \n",
-    "    current_layer = keras.Dense(64, name='Dense1', activation='relu')(current_layer)\n",
-    "    current_layer = keras.Dense(16, name='Dense2', activation='relu')(current_layer)\n",
-    "    logits = keras.Dense(5, name='Output', activation='relu')(current_layer)\n",
-    "    \n",
-    "    return logits"
+    "Since the model operates on segmented heartbeat samples, we can use a bidirectional RNN because the whole segment is available for processing at one time. It is also a more \\\"fair\\\" comparison with the CNN."
    ]
   },
   {
@@ -279,39 +268,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Using default config.\n",
-      "INFO:tensorflow:Using config: {'_model_dir': './Models/RNN', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': allow_soft_placement: true\n",
-      "graph_options {\n",
-      "  rewrite_options {\n",
-      "    meta_optimizer_iterations: ONE\n",
-      "  }\n",
-      "}\n",
-      ", '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': 100, '_train_distribute': None, '_device_fn': None, '_protocol': None, '_eval_distribute': None, '_experimental_distribute': None, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0xb3d3ca748>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': '', '_evaluation_master': '', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1}\n",
-      "INFO:tensorflow:Calling model_fn.\n",
-      "INFO:tensorflow:Done calling model_fn.\n",
-      "INFO:tensorflow:Create CheckpointSaverHook.\n",
-      "INFO:tensorflow:Graph was finalized.\n",
-      "INFO:tensorflow:Restoring parameters from ./Models/RNN/model.ckpt-2000\n",
-      "INFO:tensorflow:Running local_init_op.\n",
-      "INFO:tensorflow:Done running local_init_op.\n",
-      "INFO:tensorflow:Saving checkpoints for 2000 into ./Models/RNN/model.ckpt.\n",
-      "INFO:tensorflow:loss = 0.07811045, step = 2001\n",
-      "INFO:tensorflow:global_step/sec: 0.240464\n",
-      "INFO:tensorflow:loss = 0.0809226, step = 2101 (415.863 sec)\n",
-      "INFO:tensorflow:Saving checkpoints for 2137 into ./Models/RNN/model.ckpt.\n",
-      "INFO:tensorflow:global_step/sec: 0.242132\n",
-      "INFO:tensorflow:loss = 0.102712825, step = 2201 (412.997 sec)\n",
-      "INFO:tensorflow:Saving checkpoints for 2287 into ./Models/RNN/model.ckpt.\n",
-      "INFO:tensorflow:global_step/sec: 0.250937\n",
-      "INFO:tensorflow:loss = 0.15919255, step = 2301 (398.506 sec)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "feature_columns = [tf.feature_column.numeric_column('time_series', [187])]\n",
     "\n",
@@ -322,7 +279,7 @@
     "        'feature_columns': feature_columns,\n",
     "    })\n",
     "\n",
-    "regressor.train(train_input_fn, steps=2000)\n",
+    "regressor.train(train_input_fn, steps=4000)\n",
     "\n",
     "info = regressor.evaluate(input_fn=eval_input_fn)"
    ]
