Balance the test set classes

--- a/ClassifyECG.ipynb
+++ b/ClassifyECG.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "tf.enable_eager_execution()\n",
     "\n",
-    "TRAIN_SET = './Data/train_balanced.pickle'\n",
+    "TRAIN_SET = './Data/train_set.pickle'\n",
     "TEST_SET = './Data/test_set.pickle'\n",
     "\n",
     "with open(TEST_SET, 'rb') as file:\n",
@@ -123,7 +123,7 @@
     "    layer = keras.MaxPooling1D(name='MaxPool' + s, pool_size=5, strides=2)(layer)\n",
     "    return layer\n",
     "\n",
-    "def conv_model(input_layer, mode, params):\n",
+    "def cnn_model(input_layer, mode, params):\n",
     "    current_layer = keras.Conv1D(filters=32, kernel_size=5, strides=1)(input_layer)\n",
     "\n",
     "    for i in range(5):\n",
@@ -159,7 +159,7 @@
     "RNN_MODEL_DIR = './Models/RNN'\n",
     "RNN_OUTPUT_UNITS = [64, 128]\n",
     "\n",
-    "def birnn_model(input_layer, mode, params):\n",
+    "def rnn_model(input_layer, mode, params):\n",
     "    current_layer = tf.keras.layers.Masking(mask_value=0., input_shape=(187, 1), name='Masked')(input_layer)\n",
     "    \n",
     "    for i, size in enumerate(RNN_OUTPUT_UNITS):\n",
@@ -200,8 +200,8 @@
     "GRADIENT_NORM_THRESH = 10.0\n",
     "\n",
     "# Select model to train\n",
-    "MODEL_DIR = RNN_MODEL_DIR\n",
-    "MODEL_FN = birnn_model\n",
+    "MODEL_DIR = CNN_MODEL_DIR\n",
+    "MODEL_FN = cnn_model\n",
     "\n",
     "def classifier_fn(features, labels, mode, params):\n",
     "    is_training = mode == tf.estimator.ModeKeys.TRAIN\n",
