--- a/PreprocessECG.ipynb
+++ b/PreprocessECG.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "Data can be downloaded from: https://www.kaggle.com/coni57/model-from-arxiv-1805-00794\n",
     "\n",
-    "- Randomly sample 10% of data for the test set.\n",
+    "- Randomly sample 100 of each class of time-series for the test set. This is just over 10% of the samples in the smallest class.\n",
     "- Remaining data is balanced for the training set by upsampling under-represented classes."
    ]
   },
@@ -40,8 +40,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pickle\n",
-    "\n",
-    "TEST_FRACTION = 0.1\n",
     "\n",
     "CSV_1 = './Data/mitbih_train.csv'\n",
     "CSV_2 = './Data/mitbih_test.csv'\n",
@@ -62,15 +60,7 @@
     "x = values[:, :-1]\n",
     "y = values[:, -1].astype(int)\n",
     "del values\n",
-    "del shuffled\n",
-    "\n",
-    "n = int(len(x) * TEST_FRACTION)\n",
-    "\n",
-    "with open(TEST_SET, 'wb') as file:\n",
-    "    pickle.dump({'x': x[:n, :], 'y': y[:n]}, file)\n",
-    "\n",
-    "with open(TRAIN_SET, 'wb') as file:\n",
-    "    pickle.dump({'x': x[n:, :], 'y': y[n:]}, file)"
+    "del shuffled"
    ]
   },
   {
@@ -79,20 +69,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRAIN_BALANCED = './Data/train_balanced.pickle'\n",
+    "TEST_CLASS_SIZE = 100\n",
     "\n",
-    "xt = x[n:, :]\n",
-    "yt = y[n:]\n",
     "class_x = []\n",
     "class_count = []\n",
     "\n",
     "for label in range(5):\n",
-    "    x_i = xt[yt == label]\n",
+    "    x_i = x[y == label]\n",
+    "    \n",
+    "    # Take the first TEST_CLASS_SIZE elements for the test set\n",
+    "    if label == 0:\n",
+    "        x_test = x_i[:TEST_CLASS_SIZE, :]\n",
+    "        y_test = np.zeros((TEST_CLASS_SIZE)).astype(int)\n",
+    "    else:\n",
+    "        x_test = np.concatenate((x_test, x_i[:TEST_CLASS_SIZE, :]), axis=0)\n",
+    "        y_test = np.concatenate((y_test, np.zeros((TEST_CLASS_SIZE)).astype(int) + label))\n",
+    "        \n",
+    "    # Use the remainder of the elements for the training set\n",
+    "    x_i = x_i[TEST_CLASS_SIZE:, :]\n",
     "    class_x.append(x_i)\n",
     "    class_count.append(len(x_i))\n",
     "\n",
+    "# Compute the multiple of class elements needed to balance the classes\n",
     "counts = (np.floor(max(class_count) / np.array(class_count))).astype(int)\n",
+    "print('Multiples:', counts)\n",
     "\n",
+    "# Append repeated values for under-represented classes\n",
     "for label in range(5):\n",
     "    count = counts[label]\n",
     "    if label == 0:\n",
@@ -104,9 +106,13 @@
     "        x_bal = np.concatenate((x_bal, class_x[label]), axis=0)\n",
     "        y_bal = np.concatenate((y_bal, np.zeros((class_count[label])).astype(int) + label))\n",
     "\n",
-    "print(np.shape(x_bal), np.shape(y_bal))\n",
+    "print('Training set shapes:', np.shape(x_bal), np.shape(y_bal))\n",
+    "print('Test set shapes:', np.shape(x_test), np.shape(y_test))\n",
     "\n",
-    "with open(TRAIN_BALANCED, 'wb') as file:\n",
+    "with open(TEST_SET, 'wb') as file:\n",
+    "    pickle.dump({'x': x_test, 'y': y_test}, file)\n",
+    "\n",
+    "with open(TRAIN_SET, 'wb') as file:\n",
     "    pickle.dump({'x': x_bal, 'y': y_bal}, file)"
    ]
   },
