Added results and discussion

--- a/ClassifyECG.ipynb
+++ b/ClassifyECG.ipynb
@@ -28,7 +28,7 @@
     "## Overview\n",
     "This notebook classifies time-series for segmented heartbeats from ECG lead II recordings. Either of two models (CNN or RNN) can be selected from training and evaluation.\n",
     "- Data for this analysis should be prepared using the `PreprocessECG.ipynb` notebook from this project.\n",
-    "- Original data is from: https://www.kaggle.com/coni57/model-from-arxiv-1805-00794"
+    "- Original data is from: https://www.kaggle.com/shayanfazeli/heartbeat"
    ]
   },
   {
@@ -56,7 +56,17 @@
     "with open(TRAIN_SET, 'rb') as file:\n",
     "    train_set = pickle.load(file)\n",
     "    x_train = train_set['x']\n",
-    "    y_train = train_set['y']"
+    "    y_train = train_set['y']\n",
+    "    \n",
+    "def parameter_count():\n",
+    "    total = 0\n",
+    "    for v in tf.trainable_variables():\n",
+    "        v_elements = 1\n",
+    "        for dim in v.get_shape():\n",
+    "            v_elements *= dim.value\n",
+    "\n",
+    "        total += v_elements\n",
+    "    return total"
    ]
   },
   {
@@ -85,7 +95,7 @@
     "    dataset = combined_dataset(x_train, y_train)\n",
     "    return dataset.repeat().shuffle(500000).batch(200).prefetch(1)\n",
     "\n",
-    "# For evaluation and plotting predictions\n",
+    "# For evaluation and metrics\n",
     "def eval_input_fn():\n",
     "    dataset = combined_dataset(x_test, y_test)\n",
     "    return dataset.batch(1000).prefetch(1)"
@@ -133,6 +143,7 @@
     "    current_layer = keras.Dense(32, name='FC1', activation='relu')(current_layer)\n",
     "    logits = keras.Dense(5, name='Output')(current_layer)\n",
     "    \n",
+    "    print('Parameter count:', parameter_count())\n",
     "    return logits"
    ]
   },
@@ -171,6 +182,7 @@
     "    current_layer = keras.Dense(16, name='Dense2', activation='relu')(current_layer)\n",
     "    logits = keras.Dense(5, name='Output', activation='relu')(current_layer)\n",
     "    \n",
+    "    print('Parameter count:', parameter_count())\n",
     "    return logits"
    ]
   },
@@ -200,8 +212,8 @@
     "GRADIENT_NORM_THRESH = 10.0\n",
     "\n",
     "# Select model to train\n",
-    "MODEL_DIR = CNN_MODEL_DIR\n",
-    "MODEL_FN = cnn_model\n",
+    "MODEL_DIR = RNN_MODEL_DIR\n",
+    "MODEL_FN = rnn_model\n",
     "\n",
     "def classifier_fn(features, labels, mode, params):\n",
     "    is_training = mode == tf.estimator.ModeKeys.TRAIN\n",
@@ -221,27 +233,11 @@
     "        return tf.estimator.EstimatorSpec(mode, predictions=predictions)\n",
     "\n",
     "    # For training and evaluation, compute the loss (MSE)\n",
-    "    #labels = tf.reshape(labels, tf.shape(regression_layer))\n",
     "    loss = tf.losses.sparse_softmax_cross_entropy(labels=labels, logits=logits)\n",
     "\n",
     "    accuracy = tf.metrics.accuracy(labels=labels, predictions=predicted_classes, name='acc_op')\n",
-    "    \"\"\"\n",
-    "    global_max_grad = None\n",
-    "    for grad in tf.gradients(loss, tf.trainable_variables()):\n",
-    "        max_grad = tf.reduce_max(grad)\n",
-    "        if global_max_grad is None:\n",
-    "            global_max_grad = max_grad\n",
-    "        else:\n",
-    "            global_max_grad = tf.maximum(global_max_grad, max_grad)\n",
-    "            \n",
-    "    max_gradient = tf.metrics.mean(tf.reshape(global_max_grad, [1, 1]), name='mean_maxgrad_op')\n",
-    "    #max_gradient = global_max_grad\n",
-    "    metrics = {'accuracy': accuracy, 'max_gradient': max_gradient}\n",
-    "    \"\"\"\n",
     "    metrics = {'accuracy': accuracy}\n",
     "    tf.summary.scalar('accuracy', accuracy[1])\n",
-    "    #tf.summary.scalar('max_gradient', max_gradient)\n",
-    "\n",
     "\n",
     "    if mode == tf.estimator.ModeKeys.EVAL:\n",
     "        return tf.estimator.EstimatorSpec(mode, loss=loss, eval_metric_ops=metrics)\n",
