Workaround for Estimators

--- a/BayesClassifierECG.ipynb
+++ b/BayesClassifierECG.ipynb
@@ -56,17 +56,14 @@
       "metadata": {
         "id": "hjmdX-HbWdeI",
         "colab_type": "code",
-        "outputId": "c4d98316-f3b7-483e-d2ad-245b9636c90e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
         "import tensorflow as tf\n",
         "import tensorflow.keras.layers as keras\n",
+        "import tensorflow_probability as tfp\n",
         "import matplotlib.pyplot as plt\n",
         "import pickle\n",
         "\n",
@@ -78,6 +75,8 @@
         "TRAIN_SET = '/content/drive/My Drive/Colab Notebooks/Data/train_set.pickle'\n",
         "TEST_SET = '/content/drive/My Drive/Colab Notebooks/Data/test_set.pickle'\n",
         "\n",
+        "BATCH_SIZE = 256\n",
+        "\n",
         "with open(TEST_SET, 'rb') as file:\n",
         "    test_set = pickle.load(file)\n",
         "    x_test = test_set['x']\n",
@@ -87,20 +86,16 @@
         "    train_set = pickle.load(file)\n",
         "    x_train = train_set['x']\n",
         "    y_train = train_set['y']\n",
-        "    \n",
-        "print('Train size:', len(y_train), 'Test size:', len(y_test))"
+        "\n",
+        "TRAIN_COUNT = len(y_train)\n",
+        "TEST_COUNT = len(y_test)\n",
+        "BATCHES_PER_EPOCH = TRAIN_COUNT // BATCH_SIZE\n",
+        "INPUT_SIZE = np.shape(x_train)[1]\n",
+        "\n",
+        "print('Train size:', TRAIN_COUNT, 'Test size:', TEST_COUNT)"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
-            "Train size: 441841 Test size: 500\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -128,12 +123,12 @@
         "# For training\n",
         "def train_input_fn():\n",
         "    dataset = combined_dataset(x_train, y_train)\n",
-        "    return dataset.repeat().shuffle(500000).batch(256, drop_remainder=True).prefetch(1)\n",
+        "    return dataset.repeat().shuffle(TRAIN_COUNT).batch(BATCH_SIZE, drop_remainder=True).prefetch(1)\n",
         "\n",
         "# For evaluation and metrics\n",
         "def eval_input_fn():\n",
         "    dataset = combined_dataset(x_test, y_test)\n",
-        "    return dataset.repeat().batch(500).prefetch(1)"
+        "    return dataset.repeat().batch(TEST_COUNT).prefetch(1)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -146,15 +141,14 @@
       "cell_type": "markdown",
       "source": [
         "### Define the model\n",
-        "#### Bayesian CNN Model\n",
+        "#### Convolutional Model\n",
         "* The convolutional model is taken from: https://arxiv.org/pdf/1805.00794.pdf\n",
         "\n",
         "Model consists of:\n",
         "* An initial 1-D convolutional layer\n",
         "* 5 repeated residual blocks (`same` padding)\n",
         "* A fully-connected layer\n",
-        "* A linear layer with softmax output\n",
-        "* Flipout layers are used instead of standard layers"
+        "* A linear layer with softmax output"
       ]
     },
     {
@@ -192,27 +186,36 @@
         "  \n",
         "# Standard cross-entropy loss\n",
         "categorical_loss = tf.keras.losses.CategoricalCrossentropy(from_logits=True)\n",
-        "def loss_fn(y_true, y_pred):\n",
+        "def cnn_loss_fn(y_true, y_pred):\n",
         "    log_likelihood_loss = categorical_loss(y_true, y_pred)\n",
-        "    return log_likelihood_loss"
+        "    return log_likelihood_loss\n",
+        "\n",
+        "def cnn_config():\n",
+        "    return MODEL_DIR, cnn_model, cnn_loss_fn"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
       "metadata": {
+        "id": "5h3ticUaES-m",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "#### Bayesian CNN Model\n",
+        "* Same network architecture as above\n",
+        "* Flipout layers are used instead of standard layers"
+      ]
+    },
+    {
+      "metadata": {
         "id": "Q8XdxTVYaO1q",
         "colab_type": "code",
-        "outputId": "415ab19f-c79d-424c-f3b7-c7d7a51e2736",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 136
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
-        "import tensorflow_probability as tfp\n",
-        "\n",
         "BAYES_MODEL_DIR = '/content/drive/My Drive/Colab Notebooks/Models/BayesianCNN'\n",
         "\n",
         "def bayes_conv_unit(unit, input_layer):\n",
@@ -226,41 +229,42 @@
         "\n",
         "def bayes_cnn_model(input_shape):\n",
         "    time_series = tf.keras.layers.Input(shape=input_shape, dtype='float32')\n",
+        "#     current_layer = tfp.layers.Convolution1DFlipout(filters=32, kernel_size=5, strides=1)(time_series)\n",
         "    current_layer = keras.Convolution1D(filters=32, kernel_size=5, strides=1)(time_series)\n",
         "\n",
         "    for i in range(5):\n",
         "        current_layer = conv_unit(i + 1, current_layer)\n",
+        "#         current_layer = bayes_conv_unit(i + 1, current_layer)\n",
         "\n",
         "    current_layer = keras.Flatten()(current_layer)\n",
+        "#     current_layer = tfp.layers.DenseFlipout(32, name='FC1', activation='relu')(current_layer)\n",
         "    current_layer = keras.Dense(32, name='FC1', activation='relu')(current_layer)\n",
         "    logits = tfp.layers.DenseFlipout(5, name='Output')(current_layer)\n",
         "    \n",
         "    model = tf.keras.Model(inputs=time_series, outputs=logits, name='bayes_cnn_model')\n",
         "    return model\n",
         "  \n",
-        "# Compute the -ELBO as the loss, averaged over the batch size.\n",
+        "# Compute the negative Error Lower Bound loss\n",
         "bayes_categorical_loss = tf.keras.losses.CategoricalCrossentropy(from_logits=True)\n",
         "def bayes_loss_fn(y_true, y_pred):\n",
         "    log_likelihood_loss = bayes_categorical_loss(y_true, y_pred)\n",
-        "    kl = sum(model.losses) / 1725\n",
-        "    return log_likelihood_loss + kl"
+        "    \n",
+        "    # Use Bayes by Backprop heuristic to weight KL-divergence\n",
+        "#     global_step = tf.train.get_or_create_global_step()\n",
+        "#     step = global_step % BATCHES_PER_EPOCH\n",
+        "#     pi = tf.cond(step < 20, lambda: tf.pow(2.0, -tf.to_float(step)), lambda: tf.constant(0, dtype=tf.float32))\n",
+        "\n",
+        "    # Spread the KL-divergence over the full epoch\n",
+        "    pi = 1 / BATCHES_PER_EPOCH\n",
+        "    \n",
+        "    kl = pi * sum(model.losses)\n",
+        "    return log_likelihood_loss + kl\n",
+        "\n",
+        "def bayes_config():\n",
+        "    return BAYES_MODEL_DIR, bayes_cnn_model, bayes_loss_fn"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "WARNING: The TensorFlow contrib module will not be included in TensorFlow 2.0.\n",
-            "For more information, please see:\n",
-            "  * https://github.com/tensorflow/community/blob/master/rfcs/20180907-contrib-sunset.md\n",
-            "  * https://github.com/tensorflow/addons\n",
-            "If you depend on functionality not listed there, please file an issue.\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -276,11 +280,7 @@
       "metadata": {
         "id": "UvnL1RO4aVOK",
         "colab_type": "code",
-        "outputId": "66142d59-08b8-49e2-eff9-5816b5d275e6",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1005
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -295,50 +295,29 @@
         "# Number of steps for LR to decay by LR_DECAY_RATE\n",
         "LR_DECAY_STEPS = 4000\n",
         "\n",
-        "model = bayes_cnn_model([187, 1])\n",
+        "model_dir, model_fn, loss_fn = bayes_config()\n",
         "\n",
-        "# global_step = tf.train.get_global_step()\n",
-        "# learning_rate = tf.train.exponential_decay(INITIAL_LEARNING_RATE, global_step, LR_DECAY_STEPS, LR_DECAY_RATE)\n",
+        "model = model_fn([INPUT_SIZE, 1])\n",
+        "\n",
         "learning_rate = INITIAL_LEARNING_RATE\n",
+        "# global_step = tf.train.get_or_create_global_step()\n",
+        "# learning_rate = tf.train.exponential_decay(INITIAL_LEARNING_RATE, global_step, LR_DECAY_STEPS, LR_DECAY_RATE)\n",
         "optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate)\n",
         "\n",
-        "model.compile(loss=bayes_loss_fn, optimizer=optimizer, metrics=[tf.keras.metrics.SparseCategoricalAccuracy()])\n",
-        "model.fit(train_input_fn(), validation_data=eval_input_fn(), epochs=2, steps_per_epoch=1725, validation_steps=1)"
+        "model.compile(loss=loss_fn, optimizer=optimizer, metrics=[tf.keras.metrics.SparseCategoricalAccuracy()])\n",
+        "# model.summary()\n",
+        "\n",
+        "with tf.Session() as sess:\n",
+        "    sess.run(tf.global_variables_initializer())\n",
+        "    model.fit(train_input_fn(), validation_data=eval_input_fn(), epochs=2, steps_per_epoch=BATCHES_PER_EPOCH, validation_steps=1)\n",
+        "\n",
+        "# strategy = tf.contrib.distribute.MirroredStrategy()\n",
+        "# config = tf.estimator.RunConfig(train_distribute=strategy)\n",
+        "# estimator = tf.keras.estimator.model_to_estimator(keras_model=model, config=config, model_dir=model_dir)\n",
+        "# estimator.train(input_fn=train_input_fn, steps=BATCHES_PER_EPOCH * 4)"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/resource_variable_ops.py:435: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Colocations handled automatically by placer.\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/utils/losses_utils.py:170: to_float (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use tf.cast instead.\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use tf.cast instead.\n",
-            "Epoch 1/2\n",
-            "1725/1725 [==============================] - 39s 23ms/step - loss: 276.0610 - sparse_categorical_accuracy: 0.8129 - val_loss: 156.1742 - val_sparse_categorical_accuracy: 0.8000\n",
-            "Epoch 2/2\n",
-            "1725/1725 [==============================] - 36s 21ms/step - loss: 73.2309 - sparse_categorical_accuracy: 0.4604 - val_loss: 17.2184 - val_sparse_categorical_accuracy: 0.1500\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7fb0a50b3eb8>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 5
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -354,11 +333,7 @@
       "metadata": {
         "id": "mhCK0g-faiqI",
         "colab_type": "code",
-        "outputId": "92bf2aaa-04a3-41c5-dfbb-b68bae8500cd",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 306
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -377,42 +352,14 @@
         "conf = skm.confusion_matrix(y_test, y_predicted)\n",
         "print(conf)"
       ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "           0       0.17      0.01      0.02       100\n",
-            "           1       0.00      0.00      0.00       100\n",
-            "           2       0.25      0.02      0.04       100\n",
-            "           3       0.06      0.03      0.04       100\n",
-            "           4       0.17      0.72      0.27       100\n",
-            "\n",
-            "   micro avg       0.16      0.16      0.16       500\n",
-            "   macro avg       0.13      0.16      0.07       500\n",
-            "weighted avg       0.13      0.16      0.07       500\n",
-            "\n",
-            "[[ 1  0  1  3 95]\n",
-            " [ 0  0  0  6 94]\n",
-            " [ 4  0  2 22 72]\n",
-            " [ 0  0  0  3 97]\n",
-            " [ 1  2  5 20 72]]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
         "id": "BtlFRg6Daotn",
         "colab_type": "code",
-        "outputId": "f4b4328c-da32-4c0e-9f1b-ec5bd7deca9a",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 232
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -444,20 +391,8 @@
         "plt.title('False Negatives')\n",
         "plt.show()"
       ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-7-f923d73b71e3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0my_predicted\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m             \u001b[0mcorrect\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_prob\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0my_predicted\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0mfalse_neg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_prob\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'y_prob' is not defined"
-          ]
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
