Add BNN results

--- a/ClassifyECG.ipynb
+++ b/ClassifyECG.ipynb
@@ -212,8 +212,8 @@
     "GRADIENT_NORM_THRESH = 10.0\n",
     "\n",
     "# Select model to train\n",
-    "MODEL_DIR = RNN_MODEL_DIR\n",
-    "MODEL_FN = rnn_model\n",
+    "MODEL_DIR = CNN_MODEL_DIR\n",
+    "MODEL_FN = cnn_model\n",
     "\n",
     "def classifier_fn(features, labels, mode, params):\n",
     "    is_training = mode == tf.estimator.ModeKeys.TRAIN\n",
@@ -268,16 +268,15 @@
    "source": [
     "feature_columns = [tf.feature_column.numeric_column('time_series', [187])]\n",
     "\n",
-    "regressor = tf.estimator.Estimator(\n",
+    "estimator = tf.estimator.Estimator(\n",
     "    model_fn=classifier_fn,\n",
     "    model_dir=MODEL_DIR,\n",
     "    params={\n",
     "        'feature_columns': feature_columns,\n",
     "    })\n",
     "\n",
-    "regressor.train(train_input_fn, steps=4000)\n",
-    "\n",
-    "info = regressor.evaluate(input_fn=eval_input_fn)"
+    "# estimator.train(train_input_fn, steps=4000)\n",
+    "# info = estimator.evaluate(input_fn=eval_input_fn)"
    ]
   },
   {
@@ -294,10 +293,11 @@
    "outputs": [],
    "source": [
     "import sklearn.metrics as skm\n",
+    "import seaborn\n",
     "\n",
     "dataset_fn = eval_input_fn\n",
     "\n",
-    "predictions = regressor.predict(input_fn=dataset_fn)\n",
+    "predictions = estimator.predict(input_fn=dataset_fn)\n",
     "y_predicted = []\n",
     "\n",
     "for i, value in enumerate(predictions):\n",
@@ -311,8 +311,8 @@
     "print(report)\n",
     "\n",
     "# Confusion matrix\n",
-    "conf = skm.confusion_matrix(y_test, y_predicted)\n",
-    "print(conf)"
+    "cm = skm.confusion_matrix(y_test, y_predicted)\n",
+    "seaborn.heatmap(cm, annot=True,annot_kws={\"size\": 16})"
    ]
   },
   {
