Update discussion and plots

--- a/ClassifyECG.ipynb
+++ b/ClassifyECG.ipynb
@@ -298,21 +298,58 @@
     "dataset_fn = eval_input_fn\n",
     "\n",
     "predictions = estimator.predict(input_fn=dataset_fn)\n",
-    "y_predicted = []\n",
+    "y_pred = []\n",
+    "y_prob = []\n",
     "\n",
     "for i, value in enumerate(predictions):\n",
-    "    y_predicted.append(value['class_ids'])\n",
+    "    class_id = value['class_ids']\n",
+    "    y_pred.append(class_id)\n",
+    "    probabilities = value['probabilities']\n",
+    "    y_prob.append(probabilities[class_id])\n",
     "del predictions\n",
     "\n",
+    "y_pred = np.array(y_pred)\n",
+    "y_prob = np.array(y_prob)\n",
     "y_test = np.reshape(y_test, (len(y_test), 1))\n",
     "\n",
     "# Classification report\n",
-    "report = skm.classification_report(y_test, y_predicted)\n",
+    "report = skm.classification_report(y_test, y_pred)\n",
     "print(report)\n",
     "\n",
     "# Confusion matrix\n",
-    "cm = skm.confusion_matrix(y_test, y_predicted)\n",
+    "cm = skm.confusion_matrix(y_test, y_pred)\n",
     "seaborn.heatmap(cm, annot=True,annot_kws={\"size\": 16})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_prob_correct = y_prob[y_pred == y_test]\n",
+    "y_prob_mis = y_prob[y_pred != y_test]\n",
+    "\n",
+    "_, _, _ = plt.hist(y_prob, 10, (0, 1))\n",
+    "plt.xlabel('Belief')\n",
+    "plt.ylabel('Count')\n",
+    "plt.title('All Predictions')\n",
+    "plt.show();\n",
+    "\n",
+    "n_all, bins = np.histogram(y_prob, 10, (0, 1))\n",
+    "n_correct, bins = np.histogram(y_prob_correct, 10, (0, 1))\n",
+    "\n",
+    "f_correct = n_correct / np.clip(n_all, 1, None)\n",
+    "f_bins = 0.5 * (bins[:-1] + bins[1:])\n",
+    "f_correct = f_correct[n_all > 0]\n",
+    "f_bins = f_bins[n_all > 0]\n",
+    "\n",
+    "plt.plot([0., 1.], [0., 1.])\n",
+    "plt.scatter(f_bins, f_correct)\n",
+    "plt.xlabel('Belief')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.title('Correct Predictions')\n",
+    "plt.show();"
    ]
   },
   {
